[package]
name = "superconductor"
version = "0.1.0"
authors = ["Jaden Carver <jaden.carver@gmail.com>"]

[lib]
crate-type = ["dylib"]

[dependencies]
markup = { path="../markup.rs/markup" }
markup-proc-macro = { path="../markup.rs/markup-proc-macro" }
libc = "*"
git2 = { version = "*", default-features = false }
tungstenite = "0.10.1"
yaml-rust = "*"
md5 = "*"
fsevent = "*"
chrono = "*"
base64 = "*"
rand = "0.3"
termion = "*"
time = "*"

serde = "0.8"
serde_derive = "0.8"
serde_xml = "0.9.1"
