[package]
name = "superconductor"
version = "0.1.0"
authors = ["Jaden Carver <jaden.carver@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
maud = { version = "*", git="https://github.com/lfairy/maud.git" }
maud_macros = { version = "*", git="https://github.com/lfairy/maud.git" }
libc = "*"
git2 = { version = "*", default-features = false }
actix = "*"
actix-web = "2.0"
actix-web-actors = "2.0"
yaml-rust = "*"
md5 = "*"
fsevent = "*"
chrono = "*"
base64 = "*"
rand = "0.3"
termion = "*"
time = "*"

serde = "0.8"
serde_derive = "0.8"
serde_xml = "0.9.1"

rsass = "*"
